[gd_scene load_steps=2 format=3 uid="uid://bqte45wy6gku7"]

[ext_resource type="Script" uid="uid://dqvhmvctgwds" path="res://Tests/power_up_validation_test.gd" id="1_test"]

[node name="PowerUpValidationTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PowerUp Validation Test"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TestAllButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
text = "Test All"

[node name="TestInstantiationButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(160, 40)
layout_mode = 2
text = "Test Instantiation"

[node name="ClearButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Clear"

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 200

[node name="PowerUpList" type="ItemList" parent="MarginContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="TestSelectedButton" type="Button" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Test Selected PowerUp"

[node name="DetailsLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HSplitContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Select a PowerUp from the list to see details."

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="LogContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
